# learning-rust

./: Cargo.toml  README.md
exercises/advanced/: Cargo.toml
exercises/basics/: Cargo.toml
exercises/basics/examples/: constants.rs  data_types_scalar.rs  panics.rs  shadowing.rs  variables.rs
exercises/macros/declarative/: Cargo.toml
exercises/macros/playground/: Cargo.toml
exercises/macros/playground/src/: main.rs
exercises/macros/proc_attribute/: Cargo.toml
exercises/macros/proc_derive/: Cargo.toml
exercises/macros/proc_function_like/: Cargo.toml
